# optimal_morphology_rl

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setenv.sh
assets/hands/: hand.urdf  morph_hand.urdf  morph_pid_hand.vsim  morph_pid_hand_pen.vsim  morph_tendon_hand.vsim  morph_tendon_hand_pen.vsim
assets/hands/meshes/: bone_long.stl  bone_short.stl  metacarpal_long.stl  metacarpal_short.stl  thumb_yaw.stl  wrist_bone.stl
assets/objects/: ball.urdf  ball_big.vsim  ball_mid.vsim  ball_small.vsim  cube.urdf  cube_big.vsim  cube_mid.vsim  cube_small.vsim  pen.urdf  pen_big.vsim  pen_mid.vsim  pen_small.vsim
src/optimal_morphology_rl/: train.py
src/optimal_morphology_rl/envs/hand_envs/: finger_ee_tracking.py  hand_object_env.py  hand_pen_env.py  morph_hand_pen_env.py
src/optimal_morphology_rl/envs/hand_envs/helpers/: hand_pen_helpers.py  numpy_vlearn.py
src/optimal_morphology_rl/envs/rl_games_config/: finger_ee_tracking.yml  hand_object_ppo.yml  hand_pen_ppo.yml  morph_hand_pen_ppo.yml
src/optimal_morphology_rl/helpers/: buffer.py  mcap_to_pandas.py  numpy_vlearn.py  pandas_to_mcap.py
src/optimal_morphology_rl/modules/: contacts.py  external_force.py  force_sensors.py  kinematic_sensor.py  object_camera_recorder.py  object_generator.py  robot.py
src/optimal_morphology_rl/networks/: transformer_builder.py
src/optimal_morphology_rl/tendon_model/: 2026_02_12_16_02_10_best.pt  buffer.py  tendon_force_estimation.py
