[project]
name = "optimal_morphology_rl"
version = "0.1.0"
authors = [{ name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }]
maintainers = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" },
]
description = "RL to find optimal morphology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pyyaml",
    "vlearn_train",
    "numpy",
    "AsynchronousPS4Controller",
    "time_series_buffer",
    "optimal_morphology_rl_assets",
]

[tool.uv.sources]
optimal_morphology_rl_assets = { git = "https://github.com/goodfaiter/optimal_morphology_rl_assets.git", branch = "main" }