[project]
name = "optimal_morphology_rl"
version = "0.1.0"
authors = [{ name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }]
maintainers = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" },
]
description = "RL to find optimal morphology"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pyyaml",
    "numpy",
    "time_series_buffer",
    "vlearn_train",
    "optimal_morphology_rl_assets",
]

[tool.uv.sources]
vlearn_train = { workspace = true, editable = true }
optimal_morphology_rl_assets = { git = "ssh://git@github.com/goodfaiter/optimal_morphology_rl_assets.git", branch = "main" }
time_series_buffer = { git = "https://github.com/goodfaiter/time_series_buffer.git", branch = "main" }